@@ -8,18 +8,17 @@ import java.util.Arrays;
 import java.util.List;
 import ojosama.talkak.category.domain.Category;
 import ojosama.talkak.category.domain.CategoryType;
-
 import ojosama.talkak.category.domain.MemberCategory;
 import ojosama.talkak.category.repository.CategoryRepository;
 import ojosama.talkak.category.repository.MemberCategoryRepository;
 import ojosama.talkak.common.exception.TalKakException;
 import ojosama.talkak.common.exception.code.MemberError;
-import ojosama.talkak.member.dto.MyPageInfoRequest;
-import ojosama.talkak.member.dto.MyPageInfoResponse;
-import ojosama.talkak.member.dto.MyPageInfoResponse.CategoryResponse;
 import ojosama.talkak.member.domain.Age;
 import ojosama.talkak.member.domain.Member;
 import ojosama.talkak.member.domain.MembershipTier;
+import ojosama.talkak.member.dto.CategoryResponse;
+import ojosama.talkak.member.dto.MyPageInfoRequest;
+import ojosama.talkak.member.dto.MyPageInfoResponse;
 import ojosama.talkak.member.repository.MemberRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -30,10 +29,10 @@ import org.springframework.transaction.annotation.Transactional;
 
 @SpringBootTest
 @Transactional
-class MyPageServiceTest {
+class MemberServiceTest {
 
     @Autowired
-    private MyPageService myPageService;
+    private MemberService memberService;
     @Autowired
     private MemberRepository memberRepository;
     @Autowired
@@ -72,9 +71,8 @@ class MyPageServiceTest {
 
     @DisplayName("마이페이지 개인정보 가져오기")
     @Test
-    void get_myPage_info() {
-        MyPageInfoResponse memberInfo = myPageService.getMemberInfo(member.getId());
-
+    void getMemberInfo() {
+        MyPageInfoResponse memberInfo = memberService.getMemberInfo(member.getId());
         assertThat(memberInfo.gender()).isEqualTo("남자");
         assertThat(memberInfo.age()).isEqualTo("20대");
         assertThat(memberInfo.categories().size()).isEqualTo(3);
@@ -92,7 +90,7 @@ class MyPageServiceTest {
     void update_myPage_info() {
         MyPageInfoRequest request = new MyPageInfoRequest("여자", "20대",
             demoCategoryIds(Arrays.asList("음식", "음악", "스포츠")));
-        MyPageInfoResponse memberInfo = myPageService.updateMemberInfo(member.getId(), request);
+        MyPageInfoResponse memberInfo = memberService.updateMemberInfo(member.getId(), request);
         List<String> categoryNames = memberInfo.categories().stream()
             .map(CategoryResponse::name)
             .toList();
@@ -105,71 +103,44 @@ class MyPageServiceTest {
 
     @DisplayName("마이페이지 개인정보 수정하기 실패-유효하지 않은 성별 정보")
     @Test
-    void invalid_input_gender() {
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createGender(null)));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createGender("")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createGender("남자 ")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createGender("남자, 여자")));
+    void invalidGender() {
+        MyPageInfoRequest request = new MyPageInfoRequest("@@@", "20대",
+            demoCategoryIds(Arrays.asList("음식", "음악", "스포츠")));
+        assertThatThrownBy(() -> memberService.updateMemberInfo(member.getId(), request))
+            .isInstanceOf(TalKakException.class)
+            .hasFieldOrPropertyWithValue("errorCode", MemberError.ERROR_UPDATE_MEMBER_INFO);
     }
 
     @DisplayName("마이페이지 개인정보 수정하기 실패-유효하지 않은 나이 정보")
     @Test
-    void invalid_input_age() {
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge(null)));
+    void invalidAge() {
+        MyPageInfoRequest request = new MyPageInfoRequest("여자", null,
+            demoCategoryIds(Arrays.asList("음식", "음악", "스포츠")));
+        assertThatThrownBy(() -> memberService.updateMemberInfo(member.getId(), request))
+            .isInstanceOf(TalKakException.class)
+            .hasFieldOrPropertyWithValue("errorCode", MemberError.ERROR_UPDATE_MEMBER_INFO);
 
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("")));
+        MyPageInfoRequest request2 = new MyPageInfoRequest("여자", "0대",
+            demoCategoryIds(Arrays.asList("음식", "음악", "스포츠")));
+        assertThatThrownBy(() -> memberService.updateMemberInfo(member.getId(), request2))
+            .isInstanceOf(TalKakException.class)
+            .hasFieldOrPropertyWithValue("errorCode", MemberError.ERROR_UPDATE_MEMBER_INFO);
 
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("10")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("10대 ")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("10대.")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("60대")));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(), createAge("50대이상")));
+        MyPageInfoRequest request3 = new MyPageInfoRequest("여자", "60대",
+            demoCategoryIds(Arrays.asList("음식", "음악", "스포츠")));
+        assertThatThrownBy(() -> memberService.updateMemberInfo(member.getId(), request2))
+            .isInstanceOf(TalKakException.class)
+            .hasFieldOrPropertyWithValue("errorCode", MemberError.ERROR_UPDATE_MEMBER_INFO);
     }
 
     @DisplayName("마이페이지 개인정보 수정하기 실패-유효하지 않은 카테고리 옵션")
     @Test
-    void invalid_input_categories() {
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("", "", ""))));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("음식"))));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("음식", "음악"))));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("음식", "음악", "여행", "게임"))));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("음식", "음악", "음악"))));
-
-        assertErrorCode(MemberError.ERROR_UPDATE_MEMBER_INFO,
-            () -> myPageService.updateMemberInfo(member.getId(),
-                createCategories(List.of("음식", "음악", "여행 "))));
+    void invalidCategories() {
+        MyPageInfoRequest request = new MyPageInfoRequest("여자", "20대",
+            demoCategoryIds(Arrays.asList("음식", "음악")));
+        assertThatThrownBy(() -> memberService.updateMemberInfo(member.getId(), request))
+            .isInstanceOf(TalKakException.class)
+            .hasFieldOrPropertyWithValue("errorCode", MemberError.ERROR_UPDATE_MEMBER_INFO);
     }
 
     private MyPageInfoRequest createGender(String gender) {
